--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/goodall
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
+
+cloud.aws.s3.bucket=goodall-2
+cloud.aws.credentials.secret=${AWS_SECRET}
+cloud.aws.credentials.id=${AWS_ID}
