--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -2,3 +2,7 @@ spring.datasource.url=${JDBC.DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
+
+cloud.aws.s3.bucket=goodall-2
+cloud.aws.credentials.secret=${AWS_SECRET}
+cloud.aws.credentials.id=${AWS_ID}
